bk_ida/gccida/g2/find_reloads
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2909:14: error: expected expression
find_reloads::reload_usage *v12; // r13 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2921:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v24; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2922:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v25; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2933:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v36; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2943:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v46; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2973:4: error: expected ';' after expression
rtx v76; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2973:5: error: use of undeclared identifier 'v76'
rtx v76; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:2982:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v85; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3007:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v110; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3013:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v116; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3016:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v119; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3018:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v121; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3020:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v123; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3022:4: error: expected ';' after expression
rtx dummy_reload; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3022:5: error: use of undeclared identifier 'dummy_reload'
rtx dummy_reload; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3024:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3024:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3037:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v140; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/reload.c:3046:6: error: use of undeclared identifier 'v149'
rtx *v149; // rdx 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads/src/obj/reload.o] Error 1
